--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- 添加 Simple Icons 和 Iconify 图标库以支持更多社交媒体图标 -->
@@ -43,33 +43,22 @@
                     </div>
                     <h1 class="profile-name">Peixian MA</h1>
                     <p class="profile-title">
-                        <img src="images/paradooxai_logo.jpg" alt="HKUST Logo" class="institution-logo"> ParadooxAI / <img src="assets/img/favicon-96x96.png" alt="HKUST Logo" class="institution-logo">HKUST(GZ)
+                        <img src="assets/img/favicon-96x96.png" alt="HKUST Logo" class="institution-logo">HKUST(GZ)
                         <br>
-                        Master of Philosophy in Data Science and Analytics
+                        Master of Philosophy (M.Phil.)
+                        <br>
+                        Data Science and Analytics
                     </p>
                     <p class="profile-location"><i class="fas fa-envelope"></i> mpx0222@qq.com</p>
-                    <p class="profile-location">
-                        <i class="fas fa-map-marker-alt"></i>
-                        Guangzhou, China
-                    </p>
                     <div class="social-icons-grid">
-                        <a href="https://github.com/MPX0222" class="social-icon" title="">
-                            <i class="fab fa-github"></i>
+                        <a href="https://github.com/MPX0222" class="" title="">
+                            <i class="fab fa-github" style="font-size: 1.6rem;"></i>
                         </a>
-                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="social-icon" title="">
-                            <i class="fas fa-graduation-cap"></i>
+                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="" title="">
+                            <i class="fa-brands fa-google-scholar" style="font-size: 1.6rem;"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/MPX0222/" class="social-icon" title="">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="https://huggingface.co/MPX0222forHF" class="social-icon" title="">
-                            <span style="font-size: 1.6rem;">🤗</span>
-                        </a>
-                        <a href="files\cv\CV2025_PeixianMA_CN.pdf" class="social-icon" title="">
-                            <i class="fas fa-file-alt"></i>
-                        </a>
-                        <a href="mailto:mpx0222@qq.com" class="social-icon" title="">
-                            <i class="fas fa-envelope"></i>
+                        <a href="https://www.linkedin.com/in/MPX0222/" class="" title="">
+                            <i class="fab fa-linkedin" style="font-size: 1.6rem;"></i>
                         </a>
                     </div>
                     <div class="link-grid">
@@ -126,7 +115,7 @@
                                     </div>
                                     <div style="display: flex; align-items: center;">
                                         <img src="images/idea_logo.png" style="width: 50px; height: 24px; margin-right: 8px; object-fit: cover; object-position: center;">
-                                        <p style="margin: 0;"><a href="https://github.com/IDEA-FinAI">IDEA-FinAI Lab & DataArc Tech Inc. | AI金融与深度学习研究中心 & 数创弧光</a></p>
+                                        <p style="margin: 0;"><a href="https://github.com/IDEA-FinAI">IDEA-FinAI Lab & DataArc Tech Ltd. | AI金融与深度学习研究中心 & 数创弧光</a></p>
                                     </div>
                                 </div>
                             </div>
